# assistant_rs

./: Cargo.toml  README.md  chat_history.json
src/: duckduckgo.rs  main.rs  request.rs  tts.rs  webresult.rs  websearch.rs
