[package]
name = "assistant_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "*"
egui = "*"
egui_commonmark = "*"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
