[package]
name = "assistant_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "*"
egui = "*"
egui_file = "*"
egui_commonmark = "*"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rodio = "*"
scraper = "0.24.0"
url = "2.5.7"
urlencoding = "2.1.3"
spider = "2.37.153"
rand = "0.9.2"
